<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <data class="SplashBinding">

        <variable
            name="viewModel"
            type="com.rideaustin.ui.signin.SplashViewModel"/>

    </data>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/main_container"
        style="@style/RelativeLayout.Splash"
        tools:background="@drawable/bg_austin_splash_screen">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/splash_logo_margin_top"
            app:layout_heightPercent="10%"
            tools:src="@drawable/app_austin_white_logo"/>

        <TextView
            android:id="@+id/label_version"
            style="@style/RATextView.MontserratRegular.ThinGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_8dp"
            tools:text="2.7.0" />

        <Button
            android:id="@+id/signIn"
            style="@style/Button.RoundedBlueButton.RoundedTransparentButton"
            android:layout_above="@+id/label_version"
            android:text="@string/sign_in" />

        <RadioGroup
            android:id="@+id/env_container"
            style="@style/Button.RoundedBlueButton.RoundedWhiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signIn"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="60dp"
            android:gravity="right"
            android:orientation="vertical"
            android:visibility="gone" />

    </android.support.percent.PercentRelativeLayout>
</layout>