...
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
    <string name="extra_sms">sms_body</string>
    <string name="text_tabulation">\t</string>
    <string name="version">Version\u00A0</string>
    <string name="navigate">Navigate</string>

    <!--Driver Map Fragment -->
    <string name="map.rate.title">Driver Earnings</string>
    <string name="map.rate.rate_rider">Rate Rider</string>
    <string name="map.rate.submit">Submit</string>

    <string name="menu.decline">Decline</string>
    <string name="menu.contact">Contact</string>
    <string name="menu.support">Support</string>
    <string name="action_go_online">OFFLINE</string> <!-- button indicates current state, not action -->
    <string name="action_go_offline">ONLINE</string> <!-- button indicates current state, not action -->
    <string name="action_sync">SYNC</string>
    <string name="action_in_progress">Syncing</string>
    <string name="slide_to_arrive">Arrived</string>
    <string name="slide_to_start_trip">Begin Trip</string>
    <string name="slide_to_finish">End Trip</string>
    <string name="nickname">Nickname</string>
...
    <string name="text_this_week">This Week:</string>
    <string name="text_header_number_nof_trips">NUMBER\nOF TRIPS</string>
    <string name="text_header_total_fare">TOTAL\nFARE</string>
    <string name="text_header_total_ra_fee">TOTAL RA\nFEE</string>
    <string name="text_header_total_earnings">TOTAL\nEARNINGS</string>
    <string name="ride_cancelled">Trip was cancelled</string>
    <string name="ride_cancelled_by_rider">%1$s has cancelled the ride.</string>
    <string name="ride_cancelled_by_rider_with_fee">%1$s has cancelled the ride. You will receive $%2$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_with_fee">Your ride has been cancelled. You will receive $%1$s for ride cancellation.</string>
    <string name="ride_cancelled_by_driver_without_fee">Your ride has been cancelled.</string>
    <string name="ride_cancelled_by_admin">Ride is cancelled by administrator</string>
    <string name="text_contact_rider_dialog">How do you want to contact your rider?</string>
    <string name="text_daily_earnings">Daily Earnings</string>
...
    <string name="notification.destination_changed">Destination Changed</string>
    <string name="notification.request">%1$s is requesting a ride</string>
    <string name="notification_request_eta">%1$s is requesting a ride, ETA: %2$s</string>
    <string name="notification.rate">Please, rate your ride</string>

    <string name="share_action_navigate">Navigate</string>
    <string name="signed_out">You are signed out</string>
    <string name="rider_phone_number">Rider phone number: </string>
    <string name="cant_find_app_for_call">Can\'t find application to call</string>
    <string name="cant_find_app_to_send_message">Can\'t find application to send message</string>
    <string name="tips">TIPS</string>
    <string name="tip">Tip</string>
    <string name="rider_cancel_fee">Rider Cancellation Fee</string>
...
